# DRF_project

./: Dockerfile  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
main/: models.py  pagination.py  permissions.py  services.py  tasks.py  tests.py  urls.py  validators.py
main/migrations/: 0001_initial.py  0002_lesson_course.py  0003_payments.py  0004_alter_lesson_course.py  0005_alter_lesson_course.py
main/serializers/: course.py  lesson.py  payments.py  subscription.py
main/views/: course.py  lesson.py  payments.py  subscription.py
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: create_users.py
users/migrations/: 0001_initial.py  0002_remove_user_username_user_avatar_user_city_and_more.py
